--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <fragment
-        android:id="@+id/fragment"
+        android:id="@+id/fragQuiz"
         android:name="com.example.quadsolutionstrivia.QuizFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
